--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,14 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+/* Tambahan agar tinggi 100% berfungsi dengan benar */
+html, body, #root {
+  height: 100%;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+}
+
