--- a/src/index.css
+++ b/src/index.css
@@ -24,11 +24,12 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: auto;
+  background-color: #ffffff; /* kalau light mode */
 }
+
+
 
 h1 {
   font-size: 3.2em;
